# autocamera

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  webcam  webcam.py
.github/workflows/: test.yml
tests/: test_webcam.py
webcam/: __init__.py  camera.py  service.py  web.py
