[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "autocamera"
version = "0.1.0"
description = "Expose a DSLR or other camera as a virtual webcam device"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "AutoCamera Maintainers"}]
requires-python = ">=3.10"
dependencies = [
    "Flask",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
webcam = "webcam:main"
